fix: make layout stretch

--- a/pages/Donate/style.css
+++ b/pages/Donate/style.css
@@ -17,6 +17,7 @@ color: var(--light-color);
 .header-donate {
     background-image: url(../../assets/images/panda_bg.png);
     background-repeat: no-repeat;
+    background-size: cover;
     width: 100%;
     height: calc(390px + 80px);
     background-position: 0 80px;
@@ -71,7 +72,7 @@ color: var(--light-color);
 
 .span-margin {
     display: block;
-    margin: 52px 0 23px 0;
+    margin: 52px 0 18px 0;
 }
 
 
@@ -250,7 +251,7 @@ input::-webkit-inner-spin-button {
 }
 
 .input-radio-wrapper {
-    margin: 25px auto 30px auto;
+    margin: 25px auto;
     text-align: center;
     border: none;
 }
@@ -296,7 +297,7 @@ input::-webkit-inner-spin-button {
 
 .donate-paragraph {
     text-align: center;
-    margin: 34px 0 65px 0;
+    margin-top: 34px;
 }
 
 /*Footer styles*/
